--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "bin": {
+    "wtf-with": "index.js"
+  },
   "author": "Jehy <npm@jehy.ru>",
   "license": "MIT",
   "dependencies": {
