--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "wtfwith",
-  "version": "1.0.3",
+  "version": "1.0.5",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npm i && node ./index.js"
   },
   "bin": {
     "wtf-with": "index.js"
@@ -16,7 +16,7 @@
   "author": "Jehy <npm@jehy.ru>",
   "license": "MIT",
   "dependencies": {
-    "colors": "^1.2.1"
+    "colors": "1.2.1"
   },
   "devDependencies": {
     "eslint": "4.19.1",
