--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "wtfwith",
   "version": "1.0.6",
-  "description": "",
+  "description": "Check your lock file for repeated dependencies with different versions",
+  "keywords": [
+    "npx",
+    "dependencies"
+  ],
   "main": "index.js",
   "scripts": {
     "test": "npm i && node ./index.js"
@@ -13,7 +17,12 @@
     "type": "git",
     "url": "https://github.com/jehy/wtfwith"
   },
-  "author": "Jehy <npm@jehy.ru>",
+  "homepage": "https://github.com/jehy/wtfwith",
+  "author": {
+    "name": "Jehy",
+    "email": "npm@jehy.ru",
+    "url": "https://github.com/jehy/"
+  },
   "license": "MIT",
   "dependencies": {
     "colors": "1.2.1"
@@ -24,5 +33,8 @@
     "eslint-plugin-import": "2.10.0",
     "eslint-plugin-promise": "3.7.0",
     "eslint-plugin-standard": "3.0.1"
+  },
+  "engines": {
+    "node": ">= 6"
   }
 }
