--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wtfwith",
-  "version": "1.0.12",
+  "version": "1.0.13",
   "description": "Check your lock file for repeated dependencies with different versions",
   "keywords": [
     "npx",
@@ -8,7 +8,10 @@
   ],
   "main": "index.js",
   "scripts": {
-    "test": "npm i && node ./index.js"
+    "test": "mocha --exit",
+    "cover": "nyc mocha -t 10000 --exit",
+    "check-coverage": "nyc check-coverage --lines 40 --functions 40 --branches 10",
+    "lint": "./node_modules/.bin/eslint index.js lib.js test"
   },
   "bin": {
     "wtf-with": "index.js"
@@ -29,11 +32,14 @@
     "semver": "5.5.0"
   },
   "devDependencies": {
-    "eslint": "4.19.1",
-    "eslint-config-airbnb-base": "12.1.0",
-    "eslint-plugin-import": "2.10.0",
-    "eslint-plugin-promise": "3.7.0",
-    "eslint-plugin-standard": "3.0.1"
+    "chai": "^4.1.2",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.10.0",
+    "eslint-plugin-promise": "^3.7.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "mocha": "^5.0.5",
+    "nyc": "^11.6.0"
   },
   "engines": {
     "node": ">= 6"
