remove some accidential files

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,7 @@
 node_modules
 logs
 npm-debug.log
-v8.log
-*#*
-*!*
-config/config.json
 .idea/
 .DS_Store
-import/
-config/development.json
-config/production.json
 lib
-err_reports
-config/runtime.json
-test-results.xml
-dist
+.nyc_output
