--- a/.npmignore
+++ b/.npmignore
@@ -1,19 +1,10 @@
 node_modules
-package-lock.json
 logs
 npm-debug.log
-v8.log
-*#*
-*!*
-config/config.json
 .idea/
 .DS_Store
-import/
-config/development.json
-config/production.json
 lib
-err_reports
-config/runtime.json
-test-results.xml
-dist
 tty.gif
+test
+.nyc_output
+.travis.yml
