--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wtfwith",
-  "version": "1.0.17",
+  "version": "1.0.18",
   "description": "Check your lock file for repeated dependencies with different versions",
   "keywords": [
     "npx",
@@ -28,19 +28,20 @@
   },
   "license": "MIT",
   "dependencies": {
-    "colors": "1.2.1",
+    "colors": "1.2.4",
     "commander": "2.15.1",
+    "debug": "3.1.0",
     "semver": "5.5.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.10.0",
+    "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-promise": "^3.7.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "mocha": "^5.0.5",
-    "nyc": "^11.6.0"
+    "eslint-plugin-standard": "^3.1.0",
+    "mocha": "^5.1.1",
+    "nyc": "^11.7.1"
   },
   "engines": {
     "node": ">= 6"
