--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,11 @@
     "promise"
   ],
   "rules": {
+    "strict": [
+      "error",
+      "global"
+    ],
+    "arrow-parens": ["error", "as-needed"],
     "object-curly-newline": "off",
     "prefer-destructuring": "warn",
     "one-var": "off",
